fixed x selector button being behind loading

--- a/dataviva/static/css/utils/utils.selector.css
+++ b/dataviva/static/css/utils/utils.selector.css
@@ -211,7 +211,7 @@ div.selector_close {
   text-align: center;
   top: -10px;
   width: 18px;
-  z-index: 10;
+  z-index: 10001;
 }
 
 div.selector_close:hover {
